--- a/doorShop/nbproject/private/private.properties
+++ b/doorShop/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\phuck\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
-j2ee.server.home=D:/PRJ301/tools/apache-tomcat-10.0.27-windows-x86/apache-tomcat-10.0.27
-j2ee.server.instance=tomcat90:home=D:\\PRJ301\\tools\\apache-tomcat-10.0.27-windows-x86\\apache-tomcat-10.0.27
+deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.0
+j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.0
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\phuck\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\13\\build.properties
