Update .gitignore rules

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 # === NetBeans generated files ===
 /doorShop/nbproject/private/
+/doorShop/nbproject/project.properties
 /doorShop/nbproject/Makefile-*.mk
 /doorShop/nbproject/Package-*.bash
 
